Fix confetti overflow

--- a/src/css/layout.scss
+++ b/src/css/layout.scss
@@ -50,17 +50,9 @@
 .confetti-container {
   position: absolute;
   z-index: 101;
-  // overflow: hidden;
-  // top: 0;
-  // left: 0;
-  // width: 100vw;
-  // height: 100vh;
-
-  // max-width: 100vw;
-  // max-height: 100vh;
 
   canvas {
-    max-width: 100vw;
-    max-height: 100vh;
+    max-width: 100%;
+    max-height: 100%;
   }
 }
